--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Hw Codec Example</string>
+    <string name="app_name">RTP</string>
     <string name="start">Start/Stop Streaming</string>
     <string name="stop">Stop</string>
     <string name="flash">Flash</string>
